It is (mostly) done.
Updated Modern Beta to 1.19.3. It is working, except for minor issues
related to structure generation.